e2e/manifests/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: echoserver
---
apiVersion: v1
kind: Namespace
metadata:
  name: busybox
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: echoserver
  labels:
    app: echoserver-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
        - name: echoserver
          image: k8s.gcr.io/e2e-test-images/echoserver:2.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: web
          resources:
            requests:
              memory: 64Mi
              cpu: 300m
            limits:
              memory: 64Mi
              cpu: 400m
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox
  namespace: busybox
  labels:
    app: busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
        - name: busybox
          image: busybox
          command:
            - sleep
            - "360000"
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 64Mi
              cpu: 300m
            limits:
              memory: 64Mi
              cpu: 400m
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
...
